HW6/E-2.3.15-BinaryRepresentation2/wdir_msg/compile.err

BinaryRepresentation2.java:1: error: class BinaryRepresentation is public, should be declared in a file named BinaryRepresentation.java
public class BinaryRepresentation
       ^
1 error


